--- a/html/AR_ChooseSourceInfo.html
+++ b/html/AR_ChooseSourceInfo.html
@@ -8,10 +8,10 @@
 		<link type="text/css" rel="stylesheet" href="resources/page.css" />
 	</head>
 	<body>
-		<h1>AR - Choose Source</h1>
+		<h1>AR - Sources</h1>
 		<br>
 		<hr>
-		<p>Example using ar.js in which the user can change input source.</p>
+		<p>Example using AR.js in which the user can change the input source.</p>
 
 		<iframe src="../examples/AR_ChooseSource.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../examples/AR_ChooseSource.html" target="_blank">Open in a new tab</a>
