--- a/html/AR_BasicInfo.html
+++ b/html/AR_BasicInfo.html
@@ -11,7 +11,9 @@
 		<h1>AR - Basic</h1>
 		<br>
 		<hr>
-		<p>Simple Augmented Reality example using ar.js. You must use (print or present in a second screen) the <a href="https://stemkoski.github.io/AR-Examples/markers/kanji.png" target="_blank">Kanji</a> marker in front of the camera to play with this example.</p>
+		<p>
+         Simple Augmented Reality example using ar.js. 
+         In this example the input is a video in which a <a href="https://stemkoski.github.io/AR-Examples/markers/kanji.png" target="_blank">Kanji</a> marker is presented.</p>
 
 		<iframe src="../examples/AR_Basic.html" onload="this.contentWindow.focus()" onmouseover="this.contentWindow.focus()"></iframe>
 		<a href="../examples/AR_Basic.html" target="_blank">Open in a new tab</a>
